# PHINIX

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  README_without_docker.md  build_stack_humble.sh  nova.repos  phinix.repos  setup_code.sh
docs/: README_setup_local.md  hardware_requirements.md  launch_nodes_individually.md  setup_local.md  setup_with_docker.md  setup_without_docker.md
src/launch/phinix_launch/: CMakeLists.txt  package.xml
src/launch/phinix_launch/launch/: camera.launch.py  phinix.launch.py
src/launch/phinix_launch/param/: launch.param.yaml
src/launch/phinix_launch/rviz/: phinix.rviz
src/manager/phinix_node_manager/: .gitignore  package.xml  setup.cfg  setup.py
src/manager/phinix_node_manager/phinix_node_manager/: phinix_node_manager.py
src/nova_launch/: CMakeLists.txt  package.xml
src/nova_launch/launch/: nova.launch.py
src/nova_perception/: README.md
src/phinix_launch/: CMakeLists.txt  package.xml
src/phinix_launch/launch/: phinix.launch.py
src/phinix_perception/: README.md
src/phinix_perception/src/2d/: phinix_object_tracker
src/phinix_perception/src/phinix_perception_msgs/: CMakeLists.txt  package.xml
src/phinix_perception/src/phinix_perception_msgs/msg/: BBoxMsg.idl
src/phinix_ui/phinix_haptics_ui/: README.md  package.xml  setup.cfg  setup.py
src/phinix_ui/phinix_haptics_ui/phinix_haptics_ui/: obstacle_det_haptics.py  phinix_haptics_battery_level.py  phinix_haptics_buzzer_manager.py  phinix_haptics_cardinal_direction.py  phinix_haptics_confirmation.py  phinix_haptics_face_recognition.py  phinix_haptics_obstacle_detection.py  phinix_haptics_path_detection.py  phinix_haptics_ui.py
src/phinix_ui/phinix_haptics_ui/settings/: mac_address_file.txt
src/phinix_ui/phinix_object_detector_ui/: README.md  package.xml  setup.cfg  setup.py
src/phinix_ui/phinix_object_detector_ui/phinix_object_detector_ui/: phinix_object_detector_ui.py
src/phinix_ui/phinix_obstacle_detector_ui_translator/: README.md  package.xml  setup.cfg  setup.py
src/phinix_ui/phinix_obstacle_detector_ui_translator/phinix_obstacle_detector_ui_translator/: phinix_obstacle_detector_ui_translator.py
src/phinix_ui/phinix_openwakeword/: README.md  package.xml  setup.cfg  setup.py
src/phinix_ui/phinix_openwakeword/model/: add_a_new_face.onnx  describe_surroundings.onnx  ok_mira.onnx  (+12 more)
src/phinix_ui/phinix_sound_effects_ui/: .gitignore  PyGame_AudioTest.py  README.md  package.xml  setup.cfg  setup.py
src/phinix_ui/phinix_text_detector_ui/: README.md  package.xml  setup.cfg  setup.py
src/phinix_ui/phinix_tts_balacoon/: README.md  package.xml  setup.cfg  setup.py
src/phinix_ui/phinix_ui_message_juggler/: README.md
src/zmq/: depth-analyzer-configurable.py  oak-camera-extended.py  optimized-display-detection.py
utilities/: build_stack_humble.sh  phinix.repos
utilities/docker/: Dockerfile
(+82 files in other folders)
