<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>phinix_launch</name>
  <version>0.0.0</version>
  <description>Launch PHINIX nodes</description>
  <maintainer email="jagadishkmahendran@gmail.com">jk</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>phinix_sensor_abstractor</exec_depend>
  <exec_depend>phinix_text_detector</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
